--- a/Templates/staff/base_hospital_app.html
+++ b/Templates/staff/base_hospital_app.html
@@ -115,7 +115,7 @@
     <div class="sidebar">
         <h4>Navigation</h4>
         <a href="{% url 'appointments:appointment_list' %}">Appointments</a>
-        <a href="{% url 'records:medical_records' %}">Medical Records</a>
+        <!-- Add more links as needed -->
         <a href="{% url 'patients:profile' %}">Profile</a>
         <a href="{% url 'patients:home' %}">Home</a>
         <!-- Add more links as needed -->
