--- a/Templates/staff/doctor_dashboard.html
+++ b/Templates/staff/doctor_dashboard.html
@@ -17,5 +17,8 @@
         <li><a href="{% url 'infection_control_practices' %}">Infection Control Practices</a></li>
         <li><a href="{% url 'staff_certifications' staff_id=1 %}">Staff Certifications</a></li>
         <li><a href="{% url 'notifications' %}">Notifications</a></li>
+        <li><a href="{% url 'send_staff_message' %}">Notifications</a></li>
+        <li><a href="{% url 'doctor_patient_messages' %}">Notifications</a></li>
+        <li><a href="{% url 'team_collaboration' %}">Notifications</a></li>
     </ul>
 {% endblock %}
