--- a/Templates/staff/nurse_dashboard.html
+++ b/Templates/staff/nurse_dashboard.html
@@ -16,5 +16,7 @@
         <li><a href="{% url 'resolve_alert' pk=1 %}">Resolve Alert</a></li>
         <li><a href="{% url 'stock_alerts' %}">Stock Alerts</a></li>
         <li><a href="{% url 'medical_supply_inventory' %}">Medical Supply Inventory</a></li>
+        <li><a href="{% url 'staff_messages' %}">Staff messages</a></li>
+        <li><a href="{% url 'team_collaboration' %}">Team</a></li>
     </ul>
 {% endblock %}
