--- a/Templates/staff/admin_dashboard.html
+++ b/Templates/staff/admin_dashboard.html
@@ -18,5 +18,6 @@
         <li><a href="{% url 'staff_list' %}">Staff List</a></li>
         <li><a href="{% url 'staff_certifications' staff_id=1 %}">Staff Certifications</a></li>
         <li><a href="{% url 'notifications' %}">Notifications</a></li>
+        <li><a href="{% url 'send_staff_message' %}"> Send Staff Message </a></li>
     </ul>
 {% endblock %}
