set up views and templates properly

--- a/Templates/patients/landing.html
+++ b/Templates/patients/landing.html
@@ -150,7 +150,7 @@
         <div>
             <h2>Discover Endless Possibilities</h2>
             <p>Join us today and start your journey towards success!</p>
-            <a href="{% url 'patients:patient_register' %}">Get Started</a>
+            <a href="{% url 'patients:register' %}">Get Started</a>
         </div>
     </div>
 
