--- a/Templates/staff/base.html
+++ b/Templates/staff/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,17 +12,17 @@
     <header>
         <nav>
             <ul>
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'profile' %}">Profile</a></li> <!--I might need to remove this -->
-                <li><a href="{% url 'logout' %}">Logout</a></li>
+                <li><a href="{% url 'staff:dashboard' %}">Home</a></li>
+                <li><a href="#">Profile</a></li> <!--I might need to remove this -->
+                <li><a href="{% url 'staff:logout' %}">Logout</a></li>
                 <!-- Add links based on user role -->
                 <!--I might need to remove this guy too since the page is going to redirect the user based on their roles -->
                 {% if user.role == 'doctor' %}
-                    <li><a href="{% url 'doctor_dashboard' %}">Doctor Dashboard</a></li>
+                    <li><a href="{% url 'staff:doctor_dashboard' %}">Doctor Dashboard</a></li>
                 {% elif user.role == 'nurse' %}
-                    <li><a href="{% url 'nurse_dashboard' %}">Nurse Dashboard</a></li>
+                    <li><a href="{% url 'staff:nurse_dashboard' %}">Nurse Dashboard</a></li>
                 {% elif user.role == 'admin' %}
-                    <li><a href="{% url 'admin_dashboard' %}">Admin Dashboard</a></li>
+                    <li><a href="{% url 'staff:admin_dashboard' %}">Admin Dashboard</a></li>
                 {% endif %}
             </ul>
         </nav>
