--- a/Templates/patients/base.html
+++ b/Templates/patients/base.html
@@ -99,11 +99,12 @@
         <a href="/contact">Contact</a>
     </div>
     <div class="nav-right">
+        <!-- set this to if the user is logged in as a patient -->
         {% if user.is_authenticated %}
             <a href="/profile">Profile</a>
-            <a href="/logout">Logout</a>
+            <a href="{% url 'patients:logout' %}">Logout</a>
         {% else %}
-            <a href="/login">Login</a>
+            <a href="{% url 'patients:login' %}">Login</a>
             <a href="{% url 'patients:register' %}">Sign Up</a>
         {% endif %}
     </div>
@@ -113,7 +114,7 @@
     {% block content %}
     {% endblock %}
 </main>
-
+<br> <br>
 <footer>
     <p>&copy; {{ year|default:2024 }} Hospital Management System. All rights reserved. <a href="/privacy">Privacy Policy</a></p>
 </footer>
