--- a/Templates/patients/profile.html
+++ b/Templates/patients/profile.html
@@ -3,18 +3,13 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
-{% extends 'patients/base.html' %}
-
-{% block title %}Profile{% endblock %}
-
-{% block content %}
 <h2>Your Profile</h2>
 
 <!-- Display profile details -->
 <table>
     <tr>
         <th>Name:</th>
-        <td>{{ profile.user.username }}</td>
+        <td>{{ profile.user.user.username }}</td>
     </tr>
     <tr>
         <th>Phone Number:</th>
@@ -66,5 +61,3 @@
 <br><br><br>
 {% endblock %}
 
-
-{% endblock %}
