--- a/Templates/patients/home.html
+++ b/Templates/patients/home.html
@@ -162,6 +162,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Messages -->
+        <div class="col-md-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <i class="fas fa-pills fa-3x text-primary"></i>
+                    <h5 class="card-title mt-3">Messages</h5>
+                    <p class="card-text">Messages from Doctors</p>
+                    <a href="{% url 'patients:patient_messages' %}" class="btn btn-primary">View Messages</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
