--- a/Templates/staff/admin_dashboard.html
+++ b/Templates/staff/admin_dashboard.html
@@ -6,7 +6,12 @@
     <h1>Welcome, Admin {{ user.first_name }}</h1>
     <p>Here are your tasks for today:</p>
 
+
+    <a href="{% url 'staff:search_patient' %}"> <button type="submit">Search for patients</button> </a>
+
     <!-- Display admin-specific tasks, like order management, audit logs, etc. -->
+    <!-- Figure our what will be on this dashboard since i have updated it -->
+
     <ul>
         <li><a href="{% url 'staff:order_management' %}">Order Management</a></li>
         <li><a href="{% url 'staff:stock_alerts' %}">Stock Alerts</a></li>
